[tool.poetry]
name = "aws-pyutils"
version = "0.1.0"
description = ""
authors = ["EliaSchiavon <e.schiavon1@campus.unimib.it>"]
readme = "README.md"
packages = [{include = "aws_pyutils"}]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.88"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
